exports[`Tile renders correctly given correct prop 1`] = `
<div
  className="sc-bdVaJa eRMPuw"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;

exports[`Tile renders correctly given custom number 1`] = `
<div
  className="sc-bdVaJa dCnBtY"
  onClick={[Function]}>
  <span
    className="tile-number">
    13
  </span>
</div>
`;

exports[`Tile renders correctly given default number 1`] = `
<div
  className="sc-bdVaJa eivXnY"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;

exports[`Tile renders correctly given visible prop 1`] = `
<div
  className="sc-bdVaJa eJMii tile-invisible"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;
